no longer need to explicitly supply wrds_username to functions in wrds module

--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -129,7 +129,7 @@
     "            self.connect()\n",
     "            self.load_library_list()\n",
     "\n",
-    "    def __make_sa_engine_conn(self, raise_err=True):  #MION changed raise_err default to True\n",
+    "    def __make_sa_engine_conn(self, raise_err=False):  #MION changed raise_err default to True\n",
     "        username = self._username\n",
     "        hostname = self._hostname\n",
     "        password = urllib.parse.quote_plus(self._password)\n",
@@ -732,17 +732,12 @@
    "source": [
     "#|exports\n",
     "def download(sql_string: str=None,\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`; prompts you if it can't find it\n",
     "             params: Sequence=None # Params cited in the `sql_string`\n",
     "             ) -> pd.DataFrame:\n",
     "    \"\"\"Downloads data from WRDS using the given PostgreSQL `sql_string`\"\"\"\n",
     "\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
-    "\n",
     "    try:\n",
-    "        db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
+    "        db = Connection()\n",
     "        df = db.raw_sql(sql=sql_string, params=params)\n",
     "    except Exception as err:\n",
     "        raise err \n",
@@ -1007,7 +1002,8 @@
    ],
    "source": [
     "#| eval: false\n",
-    "db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))"
+    "#db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
+    "db = Connection()"
    ]
   },
   {
