--- a/nbs/01_wrds/06_ibes_ltg.ipynb
+++ b/nbs/01_wrds/06_ibes_ltg.ipynb
@@ -113,17 +113,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata(wrds_username: str=None\n",
-    "             ) -> pd.DataFrame:\n",
+    "def raw_metadata() -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS `{LIBRARY}.{TABLE}` table and merges it with variable labels from LABELS_FILE\"\n",
     "\n",
-    "    # Get metadata from `{LIBRARY}.{TABLE}`\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
-    "\n",
     "    try:\n",
-    "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
+    "        db = wrds_api.Connection()\n",
     "        funda = db.describe_table(LIBRARY,TABLE)\n",
     "        nr_rows = db.get_row_count(LIBRARY,TABLE)\n",
     "    finally:\n",
@@ -323,7 +317,6 @@
     "#| export\n",
     "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `ticker`, and `anndats` added by default\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None, #End date in MM/DD/YYYY format; if None, defaults to current date\n",
     "             permno_match_score: tuple=(1,), #accuracy of permno-ibes link. 1-6. 1 is best. use >1 with caution.\n",
@@ -344,7 +337,7 @@
     "    if end_date is not None: sql_string += r\" AND anndats <= %(end_date)s\"\n",
     "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
     "\n",
-    "    return wrds_api.download(sql_string, wrds_username=wrds_username, \n",
+    "    return wrds_api.download(sql_string,\n",
     "                             params={'permno_match_score': permno_match_score,\n",
     "                                 'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
    ]
