--- a/nbs/01_wrds/linking.ipynb
+++ b/nbs/01_wrds/linking.ipynb
@@ -69,8 +69,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_m(wrds_username: str=None,\n",
-    "                   obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_m(obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"CRSP Monthly ids, with gvkeys\"\"\"\n",
     "\n",
@@ -85,7 +84,7 @@
     "                    {limit_clause}                                   \n",
     "                \"\"\"\n",
     "    \n",
-    "    df = wrds_api.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='date', freq='M',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
@@ -248,8 +247,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_a(wrds_username: str=None,\n",
-    "                   obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_a(obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the annual frequency. As done by CCM.\"\"\"\n",
     "\n",
@@ -263,7 +261,7 @@
     "                    {limit_clause}            \n",
     "                \"\"\"\n",
     "    \n",
-    "    df = wrds_api.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='A',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
@@ -426,8 +424,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def gvkey_permno_q(wrds_username: str=None,\n",
-    "                   obs_limit : int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
+    "def gvkey_permno_q(obs_limit : int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "                   ) -> pd.DataFrame:\n",
     "    \"\"\"qvkey to permno correspondence at the quarterly frequency. As done by CCM.\"\"\"\n",
     "    \n",
@@ -441,7 +438,7 @@
     "                    {limit_clause}\n",
     "                \"\"\"\n",
     "    \n",
-    "    df = wrds_api.download(sql_string, wrds_username)\n",
+    "    df = wrds_api.download(sql_string)\n",
     "    df = pdm.setup_panel(df, panel_ids='permno', time_var='datadate', freq='Q',\n",
     "                         drop_index_duplicates=True, duplicates_which_keep='last')\n",
     "    df['gvkey'] = df['gvkey'].astype('string')\n",
