--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -77,16 +77,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata(wrds_username: str=None\n",
-    "             ) -> pd.DataFrame:\n",
+    "def raw_metadata() -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS `{LIBRARY}.{TABLE}` and `{LIBRARY}.{NAMES_TABLE}` tables and merges it with variable labels from LABELS_FILE\"\n",
     "\n",
-    "    # Get metadata from `{LIBRARY}.{TABLE}`\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "    try:\n",
-    "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
+    "        db = wrds_api.Connection()\n",
     "        msf = db.describe_table(LIBRARY,TABLE)\n",
     "        msf_rows = db.get_row_count(LIBRARY,TABLE)\n",
     "        mse = db.describe_table(LIBRARY,NAMES_TABLE)\n",
@@ -289,14 +284,9 @@
    "source": [
     "#| export\n",
     "def parse_varlist(vars: List[str]=None,\n",
-    "                  wrds_username: str=None,\n",
     "                  add_delist_adj_ret: str=None\n",
     "                  ) -> str:\n",
     "    \"\"\"Figure out which `vars` come from the `{LIBRARY}.{TABLE}` table and which come from the `{LIBRARY}.{NAMES_TABLE}` table and add a. and b. prefixes\"\"\"\n",
-    "\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "\n",
     "    if vars is None: vars = default_raw_vars()\n",
     "    adj_vars = ['ret','dlret','dlstcd'] if add_delist_adj_ret else []\n",
@@ -304,7 +294,7 @@
     "    vars =  req_vars + [x for x in vars if x not in req_vars]\n",
     "\n",
     "    try:\n",
-    "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
+    "        db = wrds_api.Connection()\n",
     "        all_msf_vars = list(db.describe_table(LIBRARY,TABLE).name)\n",
     "        all_mse_vars = list(db.describe_table(LIBRARY,NAMES_TABLE).name)\n",
     "        my_msf_vars = [f'a.{x}' for x in vars if x in all_msf_vars]\n",
@@ -349,7 +339,6 @@
     "#| export\n",
     "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; `permno`, `permco`, `date`, and 'exchcd' are added by default\n",
     "             obs_limit: int=None,  #Number of rows to download. If None, full dataset will be downloaded             \n",
-    "             wrds_username: str=None,       #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=None,          # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None,            # End date in MM/DD/YYYY format  \n",
     "             add_delist_adj_ret: bool=True, # Whether to calculate delisting-adjusted returns \n",
@@ -358,7 +347,7 @@
     "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS {LIBRARY}.{TABLE} and {LIBRARY}.{NAMES_TABLE} datasets. \n",
     "        Creates `ret_adj` for delisting based on Shumway and Warther (1999) and Johnson and Zhao (2007)\"\"\"\n",
     "\n",
-    "    varlist_string = parse_varlist(vars, wrds_username, add_delist_adj_ret=add_delist_adj_ret)\n",
+    "    varlist_string = parse_varlist(vars, add_delist_adj_ret=add_delist_adj_ret)\n",
     "    sql_string = f\"\"\"SELECT {varlist_string},  c.dlstcd, c.dlret \n",
     "                        FROM {LIBRARY}.{TABLE} AS a \n",
     "                        LEFT JOIN {LIBRARY}.{NAMES_TABLE} AS b\n",
@@ -370,7 +359,7 @@
     "    if end_date is not None: sql_string += r\" AND date <= %(end_date)s\"\n",
     "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
     "\n",
-    "    df = wrds_api.download(sql_string, wrds_username=wrds_username, \n",
+    "    df = wrds_api.download(sql_string,\n",
     "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})\n",
     "    \n",
     "    if add_delist_adj_ret: df = delist_adj_ret(df, adj_ret_var)\n",
@@ -546,14 +535,13 @@
     "def clean(df: pd.DataFrame=None,        # If None, downloads `vars` using `download` function; else, must contain `permno` and `date` columns\n",
     "          vars: List[str]=None,         # If None, downloads `default_raw_vars`\n",
     "          obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
-    "          wrds_username: str=None,      # If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "          start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
     "          end_date: str=None,           # End date. Default is current date          \n",
     "          clean_kwargs: dict={},        # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     "          ) -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
     "\n",
-    "    if df is None: df = download(vars=vars, obs_limit=obs_limit, wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
+    "    if df is None: df = download(vars=vars, obs_limit=obs_limit, start_date=start_date, end_date=end_date)\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_RAW_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
