--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -69,16 +69,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata(wrds_username: str=None\n",
-    "             ) -> pd.DataFrame:\n",
+    "def raw_metadata() -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS f`{LIBRARY}.{TABLE}` and merges it variable labels from LABELS_FILE\"\n",
     "\n",
-    "    # Get metadata from `{LIBRARY}.{TABLE}`\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "    try:\n",
-    "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
+    "        db = wrds_api.Connection()\n",
     "        funda = db.describe_table(LIBRARY,TABLE)\n",
     "        nr_rows = db.get_row_count(LIBRARY,TABLE)\n",
     "    finally:\n",
@@ -118,7 +113,7 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881747 rows in comp.funda.\n"
+      "Approximately 881760 rows in comp.funda.\n"
      ]
     },
     {
@@ -158,7 +153,7 @@
        "      <td>Global Company Key</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(6)</td>\n",
-       "      <td>881747</td>\n",
+       "      <td>881760</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -168,7 +163,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DATE</td>\n",
-       "      <td>881747</td>\n",
+       "      <td>881760</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -178,7 +173,7 @@
        "      <td>Data Year - Fiscal</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881747</td>\n",
+       "      <td>881760</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -188,7 +183,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(12)</td>\n",
-       "      <td>881747</td>\n",
+       "      <td>881760</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -198,7 +193,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(2)</td>\n",
-       "      <td>881747</td>\n",
+       "      <td>881760</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -215,11 +210,11 @@
        "4    consol                 <NA>  wrds.compa.download        VARCHAR(2)   \n",
        "\n",
        "  nr_rows wrds_library wrds_table  \n",
-       "0  881747         comp      funda  \n",
-       "1  881747         comp      funda  \n",
-       "2  881747         comp      funda  \n",
-       "3  881747         comp      funda  \n",
-       "4  881747         comp      funda  "
+       "0  881760         comp      funda  \n",
+       "1  881760         comp      funda  \n",
+       "2  881760         comp      funda  \n",
+       "3  881760         comp      funda  \n",
+       "4  881760         comp      funda  "
       ]
      },
      "execution_count": null,
@@ -304,7 +299,6 @@
     "#| export\n",
     "def download(vars: List[str]=None, # If None, downloads `default_raw_vars`; else `permno`, `permco`, and `date` are added by default\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None #End date in MM/DD/YYYY format\n",
     "             ) -> pd.DataFrame:\n",
@@ -323,7 +317,7 @@
     "    if end_date is not None: sql_string += r\" AND datadate <= %(end_date)s\"\n",
     "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
     "\n",
-    "    return wrds_api.download(sql_string, wrds_username=wrds_username, \n",
+    "    return wrds_api.download(sql_string,\n",
     "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
    ]
   },
@@ -338,7 +332,7 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881742 rows in comp.funda.\n",
+      "Approximately 881760 rows in comp.funda.\n",
       "Loading library list...\n",
       "Done\n"
      ]
@@ -468,14 +462,13 @@
     "def clean(df: pd.DataFrame=None,        # If None, downloads `vars` using `download` function; else, must contain `permno` and `datadate` columns\n",
     "          vars: List[str]=None,         # If None, downloads `default_raw_vars`\n",
     "          obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
-    "          wrds_username: str=None,      # If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "          start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
     "          end_date: str=None,           # End date. Default is current date          \n",
     "          clean_kwargs: dict={},        # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     "          ) -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
     "\n",
-    "    if df is None: df = download(vars=vars, obs_limit=obs_limit,  wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
+    "    if df is None: df = download(vars=vars, obs_limit=obs_limit, start_date=start_date, end_date=end_date)\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_CLEAN_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
@@ -635,7 +628,7 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881742 rows in comp.funda.\n",
+      "Approximately 881760 rows in comp.funda.\n",
       "Loading library list...\n",
       "Done\n"
      ]
@@ -1133,7 +1126,7 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881742 rows in comp.funda.\n",
+      "Approximately 881760 rows in comp.funda.\n",
       "Loading library list...\n",
       "Done\n"
      ]
