--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -122,16 +122,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata(wrds_username: str=None\n",
-    "             ) -> pd.DataFrame:\n",
+    "def raw_metadata() -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS `{LIBRARY}.{TABLE}` and merges it with variable labels from LABELS_FILE.\"\n",
     "\n",
-    "    # Get metadata from `{LIBRARY}.{TABLE}`\n",
-    "    if wrds_username is None:\n",
-    "        wrds_username = os.getenv('WRDS_USERNAME')\n",
-    "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
     "    try:\n",
-    "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
+    "        db = wrds_api.Connection()\n",
     "        finr = db.describe_table(LIBRARY,TABLE)\n",
     "        finr_rows = db.get_row_count(LIBRARY,TABLE)\n",
     "    finally:\n",
@@ -311,7 +306,6 @@
     "#| export\n",
     "def download(vars: List[str]=None, # If None, downloads all variables\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
-    "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
     "             end_date: str=None #End date in MM/DD/YYYY format\n",
     "             ) -> pd.DataFrame:\n",
@@ -327,7 +321,7 @@
     "    if end_date is not None: sql_string += r\" AND public_date <= %(end_date)s\"\n",
     "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
     "\n",
-    "    return wrds_api.download(sql_string, wrds_username=wrds_username, \n",
+    "    return wrds_api.download(sql_string,\n",
     "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
    ]
   },
@@ -720,14 +714,13 @@
     "def clean(df: pd.DataFrame=None,        # If None, downloads `vars` using `download` function; else, must contain `permno` and `date` columns\n",
     "          vars: List[str]=None,         # If None, downloads `default_raw_vars`\n",
     "          obs_limit: int=None,          # Number of rows to download. If None, full dataset will be downloaded\n",
-    "          wrds_username: str=None,      # If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
     "          start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
     "          end_date: str=None,           # End date. Default is current date          \n",
     "          clean_kwargs: dict={},        # Params to pass to `pdm.setup_panel` other than `panel_ids`, `time_var`, and `freq`\n",
     "          ) -> pd.DataFrame:\n",
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
     "\n",
-    "    if df is None: df = download(vars=vars, obs_limit=obs_limit, wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
+    "    if df is None: df = download(vars=vars, obs_limit=obs_limit, start_date=start_date, end_date=end_date)\n",
     "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_CLEAN_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
