added fetch function to dataloader

--- a/nbs/01_storage.ipynb
+++ b/nbs/01_storage.ipynb
@@ -32,10 +32,10 @@
     "#| export\n",
     "from abc import ABC, abstractmethod\n",
     "from pathlib import Path\n",
-    "import os \n",
     "import time\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -46,6 +46,7 @@
    "source": [
     "#| export \n",
     "class BaseStorage(ABC):\n",
+    "    \"Abstract base class for different types of storage classes.\"\n",
     "\n",
     "    @abstractmethod\n",
     "    def save(self, data, dataset_name):\n",
@@ -72,9 +73,13 @@
    "source": [
     "#| export\n",
     "class LocalStorage(BaseStorage):\n",
+    "    \"Methods which facilitate storing and loading data using a local file system\"\n",
     "\n",
     "    def __init__(self, data_dir_path: Path):\n",
-    "        self.data_dir_path = data_dir_path\n",
+    "        if data_dir_path.exists() and data_dir_path.is_dir(): \n",
+    "            self.data_dir_path = data_dir_path\n",
+    "        else:\n",
+    "            raise ValueError(f\"{data_dir_path} is not a path to an existing local directory\")\n",
     "\n",
     "    def save(self, data, dataset_name: str):\n",
     "        data.to_pickle(self.filepath(dataset_name)) \n",
@@ -83,7 +88,8 @@
     "        return pd.read_pickle(self.filepath(dataset_name))         \n",
     "    \n",
     "    def exists(self, dataset_name: str):\n",
-    "        return os.isfile(self.filepath(dataset_name))\n",
+    "        filepath = self.filepath(dataset_name)\n",
+    "        return filepath.exists() and filepath.is_file()\n",
     "    \n",
     "    def is_stale(self, dataset_name: str):\n",
     "        one_year_seconds = 365 * 24 * 60 * 60  \n",
@@ -92,7 +98,234 @@
     "        return (current_time - file_mtime) > one_year_seconds\n",
     "\n",
     "    def filepath(self, dataset_name: str):\n",
-    "        return self.data_dir_path/f'{dataset_name}.pkl.zip'"
+    "        return self.data_dir_path/f'{dataset_name}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "local_storage = LocalStorage(Path('../data'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "local_storage.exists('test.pkl.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.147335</td>\n",
+       "      <td>0.407536</td>\n",
+       "      <td>0.760776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.321388</td>\n",
+       "      <td>0.926208</td>\n",
+       "      <td>0.125264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.636460</td>\n",
+       "      <td>0.190718</td>\n",
+       "      <td>0.752069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2\n",
+       "0  0.147335  0.407536  0.760776\n",
+       "1  0.321388  0.926208  0.125264\n",
+       "2  0.636460  0.190718  0.752069"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df_test = pd.DataFrame(np.random.rand(3,3))\n",
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| eval: false\n",
+    "local_storage.save(df_test, 'test.pkl.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "local_storage.exists('test.pkl.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.147335</td>\n",
+       "      <td>0.407536</td>\n",
+       "      <td>0.760776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.321388</td>\n",
+       "      <td>0.926208</td>\n",
+       "      <td>0.125264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.636460</td>\n",
+       "      <td>0.190718</td>\n",
+       "      <td>0.752069</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2\n",
+       "0  0.147335  0.407536  0.760776\n",
+       "1  0.321388  0.926208  0.125264\n",
+       "2  0.636460  0.190718  0.752069"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "df = local_storage.load('test.pkl.zip')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "local_storage.is_stale('test.pkl.zip')"
    ]
   },
   {
