--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -41,7 +41,7 @@
     "#| export \n",
     "from typing import Sequence\n",
     "import getpass\n",
-    "import os, glob\n",
+    "import os\n",
     "import sys\n",
     "import stat\n",
     "import pandas as pd\n",
@@ -1254,17 +1254,6 @@
    "source": [
     "#| eval: false\n",
     "db.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide \n",
-    "for f in glob.glob('../../data/*'): os.remove(f)\n",
-    "with open('../../data/.gitkeep', 'w') as f: pass "
    ]
   },
   {
