--- a/nbs/02_dataloader.ipynb
+++ b/nbs/02_dataloader.ipynb
@@ -32,8 +32,11 @@
     "#| export\n",
     "import requests\n",
     "from io import StringIO\n",
+    "from importlib import import_module\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from finsets.storage import BaseStorage"
    ]
   },
   {
@@ -44,6 +47,44 @@
    "source": [
     "TEST_URL = 'https://www.dropbox.com/s/96xo9f1twlu3525/firmquarter_2022q1.csv?raw=1'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export \n",
+    "def fetch(dataset_name: str=None, # Name of dataset we want to retrieve\n",
+    "          finsets_module: str=None, # Which finsets module creates the dataset we want\n",
+    "          storage: BaseStorage=None, # Storage object indicating where the data should be retrieved from / saved to\n",
+    "          func: str='clean', # function inside `finsets_module` that retrieves the data you want. e.g. 'download' or 'clean'\n",
+    "          force_fetch: bool=False # Whether to redownload/reprocess the dataset even if it exists in storage\n",
+    "          ):\n",
+    "\n",
+    "    if storage.exists(dataset_name) and (not storage.is_stale(dataset_name)) and (not force_fetch):\n",
+    "        df = storage.load(dataset_name)\n",
+    "    else:\n",
+    "        module = import_module(finsets_module)\n",
+    "        df = getattr(module, func)\n",
+    "        storage.save(df, dataset_name)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
