--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -625,6 +625,25 @@
    "source": [
     "papers.hassan_etal_2019.variables()[:7]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide \n",
+    "import os, glob\n",
+    "for f in glob.glob('../data/*'): os.remove(f)\n",
+    "with open('../data/.gitkeep', 'w') as f: pass "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
