added fetch function to dataloader

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -274,7 +274,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881760</td>\n",
+       "      <td>881770</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -287,7 +287,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881760</td>\n",
+       "      <td>881770</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -300,7 +300,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881760</td>\n",
+       "      <td>881770</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -313,7 +313,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881760</td>\n",
+       "      <td>881770</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -326,7 +326,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881760</td>\n",
+       "      <td>881770</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -346,11 +346,11 @@
        "\n",
        "      INPUTS_GENERATED_BY              TYPE NR_ROWS WRDS_LIBRARY WRDS_TABLE  \\\n",
        "SCORE                                                                         \n",
-       "100                   NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
-       "71                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
-       "69                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
+       "100                   NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
+       "71                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
+       "69                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
        "\n",
        "      GROUP  \n",
        "SCORE        \n",
@@ -633,17 +633,11 @@
    "outputs": [],
    "source": [
     "#| hide \n",
+    "#| eval: false\n",
     "import os, glob\n",
     "for f in glob.glob('../data/*'): os.remove(f)\n",
     "with open('../data/.gitkeep', 'w') as f: pass "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
