added batch_download to dataloader module

--- a/nbs/00_metadata.ipynb
+++ b/nbs/00_metadata.ipynb
@@ -128,7 +128,8 @@
     "                        meta = func(return_metadata=True)\n",
     "                        for var_name in meta['outputs']:\n",
     "                            for input_name in meta['inputs']:    \n",
-    "                                new_meta = pd.DataFrame({'name':var_name, \n",
+    "                                new_meta = pd.DataFrame({\n",
+    "                                                'name':var_name, \n",
     "                                                'label':meta['labels'][var_name], \n",
     "                                                'output_of':f'{name}.{sub}.{func_name}', \n",
     "                                                'inputs':','.join(meta['inputs'][input_name]),\n",
