--- a/nbs/01_storage.ipynb
+++ b/nbs/01_storage.ipynb
@@ -32,7 +32,7 @@
     "#| export\n",
     "from abc import ABC, abstractmethod\n",
     "from pathlib import Path\n",
-    "import time\n",
+    "import time, os, pickle\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np"
@@ -56,6 +56,10 @@
     "    def load(self, dataset_name):\n",
     "        pass \n",
     "    \n",
+    "    @abstractmethod\n",
+    "    def delete(self, dataset_name):\n",
+    "        pass \n",
+    "\n",
     "    @abstractmethod\n",
     "    def exists(self, dataset_name):\n",
     "        pass  \n",
@@ -82,11 +86,17 @@
     "            raise ValueError(f\"{data_dir_path} is not a path to an existing local directory\")\n",
     "\n",
     "    def save(self, data, dataset_name: str):\n",
-    "        data.to_pickle(self.filepath(dataset_name)) \n",
+    "        with open(self.filepath(dataset_name), 'wb') as f:\n",
+    "            pickle.dump(data, f)\n",
     "\n",
     "    def load(self, dataset_name: str):\n",
-    "        return pd.read_pickle(self.filepath(dataset_name))         \n",
+    "        with open(self.filepath(dataset_name), 'rb') as f:\n",
+    "            data = pickle.load(f)\n",
+    "        return data\n",
     "    \n",
+    "    def delete(self, dataset_name: str):\n",
+    "        os.remove(self.filepath(dataset_name))\n",
+    "\n",
     "    def exists(self, dataset_name: str):\n",
     "        filepath = self.filepath(dataset_name)\n",
     "        return filepath.exists() and filepath.is_file()\n",
@@ -129,7 +139,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "local_storage.exists('test.pkl.zip')"
+    "local_storage.exists('test.pkl')"
    ]
   },
   {
@@ -166,21 +176,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.188734</td>\n",
-       "      <td>0.948732</td>\n",
-       "      <td>0.187725</td>\n",
+       "      <td>0.527991</td>\n",
+       "      <td>0.440262</td>\n",
+       "      <td>0.674734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.803280</td>\n",
-       "      <td>0.884010</td>\n",
-       "      <td>0.634190</td>\n",
+       "      <td>0.011943</td>\n",
+       "      <td>0.914838</td>\n",
+       "      <td>0.430143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.884410</td>\n",
-       "      <td>0.432121</td>\n",
-       "      <td>0.293723</td>\n",
+       "      <td>0.249933</td>\n",
+       "      <td>0.384021</td>\n",
+       "      <td>0.958614</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -188,9 +198,9 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.188734  0.948732  0.187725\n",
-       "1  0.803280  0.884010  0.634190\n",
-       "2  0.884410  0.432121  0.293723"
+       "0  0.527991  0.440262  0.674734\n",
+       "1  0.011943  0.914838  0.430143\n",
+       "2  0.249933  0.384021  0.958614"
       ]
      },
      "execution_count": null,
@@ -211,7 +221,7 @@
    "outputs": [],
    "source": [
     "#| eval: false\n",
-    "local_storage.save(df_test, 'test.pkl.zip')"
+    "local_storage.save(df_test, 'test.pkl')"
    ]
   },
   {
@@ -232,7 +242,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "local_storage.exists('test.pkl.zip')"
+    "local_storage.exists('test.pkl')"
    ]
   },
   {
@@ -269,21 +279,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.188734</td>\n",
-       "      <td>0.948732</td>\n",
-       "      <td>0.187725</td>\n",
+       "      <td>0.527991</td>\n",
+       "      <td>0.440262</td>\n",
+       "      <td>0.674734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.803280</td>\n",
-       "      <td>0.884010</td>\n",
-       "      <td>0.634190</td>\n",
+       "      <td>0.011943</td>\n",
+       "      <td>0.914838</td>\n",
+       "      <td>0.430143</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.884410</td>\n",
-       "      <td>0.432121</td>\n",
-       "      <td>0.293723</td>\n",
+       "      <td>0.249933</td>\n",
+       "      <td>0.384021</td>\n",
+       "      <td>0.958614</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -291,9 +301,9 @@
       ],
       "text/plain": [
        "          0         1         2\n",
-       "0  0.188734  0.948732  0.187725\n",
-       "1  0.803280  0.884010  0.634190\n",
-       "2  0.884410  0.432121  0.293723"
+       "0  0.527991  0.440262  0.674734\n",
+       "1  0.011943  0.914838  0.430143\n",
+       "2  0.249933  0.384021  0.958614"
       ]
      },
      "execution_count": null,
@@ -303,7 +313,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "df = local_storage.load('test.pkl.zip')\n",
+    "df = local_storage.load('test.pkl')\n",
     "df"
    ]
   },
@@ -325,7 +335,42 @@
    ],
    "source": [
     "#| eval: false\n",
-    "local_storage.is_stale('test.pkl.zip')"
+    "local_storage.is_stale('test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#| eval: false\n",
+    "local_storage.delete('test.pkl')\n",
+    "local_storage.exists('test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide \n",
+    "#| eval: false\n",
+    "import os, glob\n",
+    "for f in glob.glob('../data/*'): os.remove(f)\n",
+    "with open('../data/.gitkeep', 'w') as f: pass "
    ]
   },
   {
