--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -210,7 +210,7 @@
     "        \"\"\"Load the list of Postgres schemata (c.f. SAS LIBNAMEs)\n",
     "        the user has permission to access.\"\"\"\n",
     "        self.insp = sa.inspect(self.connection)\n",
-    "        print(\"Loading library list...\")\n",
+    "        #print(\"Loading library list...\")\n",
     "        query = \"\"\"\n",
     "WITH pgobjs AS (\n",
     "    -- objects we care about - tables, views, foreign tables, partitioned tables\n",
@@ -250,7 +250,7 @@
     "        \"\"\"\n",
     "        cursor = self.connection.execute(query)\n",
     "        self.schema_perm = [x[0] for x in cursor.fetchall()]\n",
-    "        print(\"Done\")\n",
+    "        #print(\"Done\")\n",
     "\n",
     "    def __get_user_credentials(self):\n",
     "        \"\"\"Prompt the user for their WRDS credentials.\n",
@@ -510,7 +510,7 @@
     "              5    fname     True  VARCHAR\n",
     "        \"\"\"\n",
     "        rows = self.get_row_count(library, table)\n",
-    "        print(\"Approximately {} rows in {}.{}.\".format(rows, library, table))\n",
+    "        #print(\"Approximately {} rows in {}.{}.\".format(rows, library, table))\n",
     "        table_info = pd.DataFrame.from_dict(\n",
     "            self.insp.get_columns(table, schema=library)\n",
     "        )\n",
@@ -761,14 +761,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -990,16 +982,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| eval: false\n",
     "#db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
@@ -1053,13 +1036,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Approximately 881760 rows in comp.funda.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
