--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -274,7 +274,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881770</td>\n",
+       "      <td>881927</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -287,7 +287,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881770</td>\n",
+       "      <td>881927</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -300,7 +300,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881770</td>\n",
+       "      <td>881927</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -313,20 +313,20 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881770</td>\n",
+       "      <td>881927</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>dptb</td>\n",
-       "      <td>Deposits - Total - Banks</td>\n",
+       "      <td>rvti</td>\n",
+       "      <td>Reserves - Total</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881770</td>\n",
+       "      <td>881927</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
@@ -342,15 +342,15 @@
        "75      act    Current Assets - Total   wrds.compa.download    NaN   \n",
        "75       ao            Assets - Other   wrds.compa.download    NaN   \n",
        "71     batr  Benefits Assumed - Total   wrds.compa.download    NaN   \n",
-       "69     dptb  Deposits - Total - Banks   wrds.compa.download    NaN   \n",
+       "69     rvti          Reserves - Total   wrds.compa.download    NaN   \n",
        "\n",
        "      INPUTS_GENERATED_BY              TYPE NR_ROWS WRDS_LIBRARY WRDS_TABLE  \\\n",
        "SCORE                                                                         \n",
-       "100                   NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
-       "75                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
-       "71                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
-       "69                    NaN  DOUBLE_PRECISION  881770         comp      funda   \n",
+       "100                   NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
+       "71                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
+       "69                    NaN  DOUBLE_PRECISION  881927         comp      funda   \n",
        "\n",
        "      GROUP  \n",
        "SCORE        \n",
@@ -409,16 +409,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading library list...\n",
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| eval: false\n",
     "db = wrds_api.Connection()"
@@ -511,72 +502,22 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>dtdate</th>\n",
-       "      <th>Nominal GDP</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Qdate</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022Q3</th>\n",
-       "      <td>2022-07-01</td>\n",
-       "      <td>25994.639</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q4</th>\n",
-       "      <td>2022-10-01</td>\n",
-       "      <td>26408.405</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023Q1</th>\n",
-       "      <td>2023-01-01</td>\n",
-       "      <td>26813.601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023Q2</th>\n",
-       "      <td>2023-04-01</td>\n",
-       "      <td>27063.012</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023Q3</th>\n",
-       "      <td>2023-07-01</td>\n",
-       "      <td>27623.543</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           dtdate  Nominal GDP\n",
-       "Qdate                         \n",
-       "2022Q3 2022-07-01    25994.639\n",
-       "2022Q4 2022-10-01    26408.405\n",
-       "2023Q1 2023-01-01    26813.601\n",
-       "2023Q2 2023-04-01    27063.012\n",
-       "2023Q3 2023-07-01    27623.543"
+       "{'Q':            dtdate    nom_gdp\n",
+       " Qdate                       \n",
+       " 1947Q1 1947-01-01    243.164\n",
+       " 1947Q2 1947-04-01    245.968\n",
+       " 1947Q3 1947-07-01    249.585\n",
+       " 1947Q4 1947-10-01    259.745\n",
+       " 1948Q1 1948-01-01    265.742\n",
+       " ...           ...        ...\n",
+       " 2022Q3 2022-07-01  25994.639\n",
+       " 2022Q4 2022-10-01  26408.405\n",
+       " 2023Q1 2023-01-01  26813.601\n",
+       " 2023Q2 2023-04-01  27063.012\n",
+       " 2023Q3 2023-07-01  27623.543\n",
+       " \n",
+       " [307 rows x 2 columns]}"
       ]
      },
      "execution_count": null,
@@ -585,7 +526,7 @@
     }
    ],
    "source": [
-    "fred.clean('GDP', label='Nominal GDP').tail()"
+    "fred.clean(vars = ['GDP'])"
    ]
   },
   {
